FCS-578: Context header should use cached id's for lookup (#301)